Adjust sticky note height. Fix news page title not hidden by header also in Safari

--- a/themes/solr/static/css/base.css
+++ b/themes/solr/static/css/base.css
@@ -542,7 +542,7 @@ section.orange.full-width {
   transform: translate(-50%, -70%);
   width: 600px;
   max-width: 100%;
-  height: 300px;
+  height: 350px;
   max-height: 100%;
   display: block;
 }
@@ -572,7 +572,7 @@ section.orange.full-width {
   border: 0;
   background: black;
   color: white;
-  padding: 5px 10px;
+  padding: 4px 10px;
   font-size: 1.3rem;
 }
 
